# JapaneseVerbConjugator

./: .coveragerc  CHANGELOG.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
src/japverbconj/: copula_gen.py  negative_form_gen.py  positive_form_gen.py  utils.py  verb_form_gen.py
src/japverbconj/constants/: enumerated_types.py  irregular_verb_forms.py  irregular_verb_groups.py  verb_ending_constants.py
tests/: constants.py  test_decorators.py  test_readme.py  test_utils.py  test_verb_form_gen.py
